--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ml-utils",
   "version": "0.0.1",
-  "description": "",
+  "description": "Microlattice.js utils",
   "supportIC":[ "mt7687" ],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "author": "iamblue",
-  "license": "ISC",
+  "license": "apache2",
   "dependencies": {}
 }
